--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,12 @@
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    issei: { password: 'hogehoge', roles: ROLE_USER }
 
     firewalls:
         dev:
@@ -9,4 +14,14 @@ security:
             security: false
 
         default:
-            anonymous: ~
+            provider:  in_memory
+            anonymous: true
+            form_login:
+                login_path: login
+                check_path: login_check
+            logout:
+                path: logout
+
+    access_control:
+        - { path: login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/,    role: ROLE_USER }
